--- a/produit.html
+++ b/produit.html
@@ -30,7 +30,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   marque : Puma <br>
   Taille : M </p> 
   
-  <img src="maillotrennesdomicile.JPG" />
+  <img src="PSG.jpg" />
   <p><a href="https://wafy-source.github.io/eleve4/confirmation.html"> Achetez ce produit </a> <p>
     <p><a href="https://wafy-source.github.io/eleve4/hello.html"> homepage </a> <p> 
                                                      
