--- a/produit.html
+++ b/produit.html
@@ -27,7 +27,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h1> Maillot Domicile stade rennais <h1>
 
   <p>Prix : 90€ <br>
-  marque : Puma <br>
+  marque : Nike <br>
   Taille : M </p> 
   
   <img src="PSG.jpg" />
