--- a/produit.html
+++ b/produit.html
@@ -24,7 +24,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="header">
       </div>
       <div class="content">
-<h1> Maillot Domicile stade rennais <h1>
+<h1> Maillot Domicile PSG <h1>
 
   <p>Prix : 90€ <br>
   marque : Nike <br>
